<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>smc_ros2_arduino_hw_interface</name>
  <version>0.0.0</version>
  <description>Demo package of `ros2_control` hardware for Samuko Motor Controller Shield.</description>

  <maintainer email="samuel.c.agba@gmail.com">Samuel Obiagba</maintainer>
  <maintainer email="denis.stogl@stoglrobotics.de">Dr.-Ing. Denis Štogl</maintainer>
  <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
  <maintainer email="christoph.froehlich@ait.ac.at">Christoph Froehlich</maintainer>

  <author email="samuel.c.agba@gmail.com">Samuel Obiagba</author>
  <author email="denis.stogl@stoglrobotics.de">Dr.-Ing. Denis Štogl</author>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>libserial-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
